LIBLDLVHEXMCSDIAGEXPL_HDRS = \
		 BaseContextAtom.h \
		 ACC_ContextAtom.h \
		 ContextInterfaceAtom.h \
		 BaseContextPlugin.h \
		 ContextInterfacePlugin.h

pkginclude_HEADERS = $(LIBLDLVHEXMCSDIAGEXPL_HDRS)

noinst_HEADERS = \
		 MCSdiagexplPlugin.h \
		 InputConverter.h \
		 InputParserDriver.h \
		 BridgeRule.h \
		 BridgeRuleEntry.h \
		 ParseContext.h \
		 DLV_ASP_ContextAtom.h \
		 OutputRewriter.h \
		 EquilibriumPrintVisitor.h \
		 DiagExplPrintVisitor.h \
		 Timing.h \
		 Global.h
